Improve CLI and Extend Liveness Analysis (#9)
* Improve CLI

* Add file handler to decouple tasks

* Add docstrings

* Calculate minimum register count per function

* Add unused argument analysis, improve interface

* Describe latest changes

* Improve readability

* Add line information to dataflow graph, refactor line evaluation

* Simplify dataflow graph setup

* Simplify interference graph setup

* Add analysis for unused variable values

* Add unused declaration analysis, improve readability

* Fix return type determination

* Bump version